Deleted my delicious username from reader.html

--- a/reader.html
+++ b/reader.html
@@ -28,7 +28,7 @@
 		e.stopPropagation();
 	}, false);
 	window.addEventListener('load', function() {
-		var username = "higeorange";
+		var username = "USERNAME";
 //		if(username = localStorage["username"]) {
 			var script = document.createElement("script");
 				script.type = "text/javascript";
